react-asp-in-aks.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnet-app
  labels:
    app: aspnet-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aspnet-app
  template:
    metadata:
      labels:
        app: aspnet-app
    spec:
      containers:
        - name: aspnet-app
          image: webmasterdevlin/asp-weather-api-k8s:0.0.1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: aspnet-service
spec:
  selector:
    app: aspnet-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-redux-app
  labels:
    app: react-redux-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-redux-app
  template:
    metadata:
      labels:
        app: react-redux-app
    spec:
      containers:
        - name: react-redux-app
          image: webmasterdevlin/redux-k8s:0.0.1
          resources:
            limits:
              memory: "128Mi"
              cpu: "20m"
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: react-redux-service
spec:
  type: ClusterIP
  selector:
    app: react-redux-app

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  # frontend.<ingress ip>.nip.io
  tls:
    - hosts:
        - frontend.20.190.25.183.nip.io
      secretName: react-asp-cert
  rules:
    - host: frontend.20.190.25.183.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: react-redux-service
              servicePort: 8080
          - path: /weatherforecast
            backend:
              serviceName: aspnet-service
              servicePort: 8081
